<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    style="@style/Theme.BecTec2"
    >

    <TextView
        android:id="@+id/log_in_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_view"
        android:textStyle="bold"

        android:textSize="40sp"

        />



    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        android:text="@string/text_username" />




    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/text_username"
        android:inputType="textShortMessage"
        android:textColorHighlight="@color/lightGray"




        android:hint="@string/hint_username"

        />


    <TextView
        android:id="@+id/error_username"
        android:layout_width="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_alignParentEnd="true"
        android:visibility="gone"
        android:layout_marginTop="0dp"
        android:text="@string/error_username"
        android:textColor="@color/red" />

    <TextView

        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        android:layout_below="@id/username"


        android:text="@string/text_password"
        />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:layout_below="@id/text_password"
        android:inputType="textPassword"
        android:textColorHighlight="@color/lightGray"
        android:layout_margin="10dp"

        />


    <TextView
        android:id="@+id/error_password"
        android:layout_width="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:visibility="gone"
        android:layout_marginTop="0dp"
        android:text="@string/error_password"
        android:textColor="@color/red" />


    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/password"

        android:layout_marginEnd="10dp"
        android:text="@string/button_register"
        android:onClick="redirect_register"
        android:padding="0dp"

        />


    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_toStartOf="@id/buttonRegister"

        android:layout_marginEnd="10dp"
        android:text="@string/button_log_in"
        android:padding="0dp"
        android:onClick="checkCredentials"

        />















</RelativeLayout>