<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BecTec"
    android:tag="test">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/credit_card_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/text_credit_card"
        android:layout_marginBottom="10dp"

        android:textSize="20sp"

        />




    <RelativeLayout
        android:id="@+id/credit_card_box"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="400dp"
        android:layout_below="@id/credit_card_text"



        android:layout_marginTop="0dp">

        <TextView
            android:id="@+id/number_credit_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"

            android:text="@string/text_number_credit_card" />

        <EditText
            android:id="@+id/part1_credit_card"
            android:layout_marginStart="8dp"
            android:layout_width="80dp"
            android:inputType="textShortMessage"
            android:layout_height="wrap_content"
            android:layout_below="@id/number_credit_card"/>


        <TextView
            android:id="@+id/firstMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/number_credit_card"
            android:layout_toEndOf="@id/part1_credit_card"
            android:text="@string/minus"
            android:textSize="40sp"

            />

        <EditText
            android:id="@+id/part2_credit_card"
            android:layout_width="80dp"

            android:inputType="textShortMessage"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/firstMinus"
            android:layout_below="@id/number_credit_card"/>

        <TextView
            android:id="@+id/secondMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:layout_toEndOf="@id/part2_credit_card"
            android:layout_below="@id/number_credit_card"
            android:textSize="40sp"

            />

        <EditText
            android:id="@+id/part3_credit_card"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/secondMinus"
            android:inputType="textShortMessage"
            android:layout_below="@id/number_credit_card"/>

        <TextView
            android:id="@+id/text_cvv"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/number_credit_card"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@id/part3_credit_card"
            android:text="@string/text_cvv" />


        <TextView
            android:id="@+id/error_credit_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/part1_credit_card"
            android:layout_marginLeft="185dp"
            android:visibility="gone"
            android:layout_marginTop="-5dp"
            android:text="@string/error_invalid_card_number"
            android:textColor="@color/red"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/error_cvv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/part1_credit_card"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="44dp"
            android:visibility="gone"

            android:layout_marginTop="-5dp"
            android:text="@string/error_invalid_cvv"
            android:textColor="@color/red"
            android:textSize="10sp" />


        <EditText
            android:id="@+id/cvv"
            android:layout_width="45dp"
            android:layout_height="wrap_content"

            android:layout_toEndOf="@id/text_cvv"
            android:inputType="textShortMessage"
            android:layout_below="@id/number_credit_card"/>

        <TextView
            android:id="@+id/text_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_owner"
            android:layout_below="@id/part1_credit_card"
            android:layout_marginTop="10dp"
            />
        
        <EditText
            android:id="@+id/credit_card_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_owner"
            android:layout_marginHorizontal="15dp"

            />

        <TextView
            android:id="@+id/error_owner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/credit_card_owner"
            android:layout_alignParentLeft="true"
            android:visibility="gone"
            android:layout_marginStart="14dp"

            android:text="@string/error_owner_name"
            android:textColor="@color/red"
            android:textSize="12sp" />




        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cancel"
            android:layout_below="@id/credit_card_owner"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:onClick="cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeWidth="3dp"

            />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_add"
            android:layout_below="@id/credit_card_owner"
            android:layout_toStartOf="@id/cancel_button"
            android:layout_marginEnd="5dp"
            android:onClick="add_credit_card"

            />





    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_for_null_credit_card"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@id/credit_card_text"



    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/button_add_credit_card"

        android:onClick="add"


         />



    </RelativeLayout>




</RelativeLayout>