<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pago">

    <LinearLayout
        android:id="@+id/text_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/bet_for"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/apostador"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:text="@string/text_profit"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/cantidad"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:textSize="20dp" />

        </LinearLayout>




    </LinearLayout>

    <TextView
        android:id="@+id/text_send2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_box"
        android:layout_marginTop="17dp"
        android:text="@string/text_send2"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/quantity2"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_box"
        android:layout_marginStart="6dp"
        android:layout_marginTop="2dp"
        android:inputType="textShortMessage"
        android:layout_toEndOf="@id/text_send2" />


    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cancel"
        android:layout_below="@id/text_send2"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:onClick="cancel_bet"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeWidth="3dp"

        />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create_bet"
        android:layout_marginTop="20dp"
        android:layout_below="@id/text_send2"
        android:layout_toStartOf="@id/cancel_button"
        android:layout_marginEnd="5dp"
        android:onClick="bet"


        />

    <TextView
        android:id="@+id/error_quantity_deposit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantity2"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="-31dp"
        android:layout_marginEnd="25dp"
        android:layout_toRightOf="@id/quantity2"
        android:visibility="gone"
        android:textColor="@color/red" />


</RelativeLayout>